JDBC Readme: added Drivers section